--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Comfort Cafe</title>
 </head>
 <body>
-    
+    <h1 class="blue">ブルー</h1>
+    <h1 class="red">レッド</h1>
 </body>
 </html>
