--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Comfort Cafe</title>
 </head>
 <body>
-    <h1 class="blue">ブルー</h1>
-    <h1 class="red">レッド</h1>
+ <div class="box1">
+    box1
+    <div class="box2">
+        box2
+    </div>
+ </div>
 </body>
 </html>
