--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <title>Comfort Cafe</title>
 </head>
 <body>
@@ -13,5 +14,6 @@
         box2
     </div>
  </div>
+ <script src="js/bootstrap.min.css"></script>
 </body>
 </html>
