ボタン追加

--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     <title>Comfort Cafe</title>
 </head>
 <body>
- <div class="box1">
-    box1
-    <div class="box2">
-        box2
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 content1">
+                コンテンツ1
+            </div>
+            <div class="col-lg-6 content2">
+                コンテンツ2
+            </div>
+        </div>
+    </div>
+    <div class="mt-5">
+        <button type="button" class="btn btn-success">Success</button>
+        <button type="button" class="btn-primary">Primary</button>
     </div>
  </div>
  <script src="js/bootstrap.min.css"></script>
