--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="mt-5">
         <button type="button" class="btn btn-success">Success</button>
-        <button type="button" class="btn-primary">Primary</button>
+        <button type="button" class="btn btn-primary">Primary</button>
     </div>
  </div>
  <script src="js/bootstrap.min.css"></script>
