ヘッダー編集

--- a/index.html
+++ b/index.html
@@ -3,26 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Comfort Cafe</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 content1">
-                コンテンツ1
-            </div>
-            <div class="col-lg-6 content2">
-                コンテンツ2
-            </div>
-        </div>
-    </div>
-    <div class="mt-5">
-        <button type="button" class="btn btn-success">Success</button>
-        <button type="button" class="btn btn-primary">Primary</button>
-    </div>
- </div>
+    <header>
+        <h1 class="heading">
+            <a href="index.html">Comfort Cafe</a>
+        </h1>
+    </header>
+
+    <footer></footer>
  <script src="js/bootstrap.min.css"></script>
 </body>
 </html>
