ヘッダー編集2

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
         <h1 class="heading">
             <a href="index.html">Comfort Cafe</a>
         </h1>
+        <nav>
+            <ul class="main-nav">
+                <li>トップ</li>
+                <li>ニュース</li>
+                <li>メニュー</li>
+            </ul>
+        </nav>
     </header>
 
     <footer></footer>
