フッター完成

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </nav>
     </header>
 
-    <footer></footer>
+    <footer>
+        <p><small>&copy; 2024 Comfort Cafe</small></p>
+    </footer>
  <script src="js/bootstrap.min.css"></script>
 </body>
 </html>
