--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Comfort Cafe</title>
 </head>
 <body>
+    <div id="top">
     <header>
         <h1 class="heading">
             <a href="index.html">Comfort Cafe</a>
@@ -20,6 +21,12 @@
         </nav>
     </header>
 
+<div class="main-visual"> <!-- メインビジュアルクラスの内容物 -->
+    <h2 class="main-title">心地良い時間（とき）を過ごす</h2>
+    <p>すべての疲れを忘れる<b>心地良さ</b>を追求したカフェです</p>
+    <a class="btn" href="menu.html">メニュー</a>
+</div>
+ </div>
     <footer>
         <p><small>&copy; 2024 Comfort Cafe</small></p>
     </footer>
