--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </h1>
         <nav>
             <ul class="main-nav">
-                <li>トップ</li>
-                <li>ニュース</li>
-                <li>メニュー</li>
+                <li><a href="index.html">トップ</a></li>
+                <li><a href="news.html">ニュース</a></li>
+                <li><a href="menu.html">メニュー</a></li>
             </ul>
         </nav>
     </header>
