--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
     </div>
     </div>
     <div class="menu-contents">
-        <div class="menu-drink"></div>
+        <div class="menu-drink">
         <img src="./img/menudrink.png" alt="ドリンクメニュー">
         <div class="drink">
             <h1 class="drink-title">ドリンクメニュー</h1>
@@ -53,8 +53,42 @@
                     </tr>
                 </tbody>
             </table>
+            </div>
         </div>
-        <div class="menu-sweers"></div>
+        <div class="menu-sweets">
+            <div class="sweets">
+                <h1 class="sweets-title">スイーツメニュー</h1>
+                <table class="sweets-table">
+                    <tbody>
+                        <tr>
+                            <td>チーズケーキ</td>
+                            <td>550円</td>
+                        </tr>
+                        <tr>
+                            <td>チョコレートケーキ</td>
+                            <td>660円</td>
+                        </tr>
+                        <tr>
+                            <td>ストロベリーショートケーキ</td>
+                            <td>650円</td>
+                        </tr>
+                        <tr>
+                            <td>ティラミス</td>
+                            <td>600円</td>
+                        </tr>
+                        <tr>
+                            <td>モンブラン</td>
+                            <td>700円</td>
+                        </tr>
+                        <tr>
+                            <td>マカロン各種</td>
+                            <td>250円</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <img src="./img/menusweets.png" alt="スイーツメニュー">
+        </div>
     </div>
     <footer>
         <p><small>&copy; 2024 Comfort Cafe</small></p>
